# SentinerGurad-AMR

./: README.md
motor_control/: README.md  package.xml  setup.cfg  setup.py  setup.py.save
motor_control/motor_control/: motor_control_joy.py  motor_control_node.py
rplidar_ros-dashing/: README2.md
rplidar_ros-dashing/launch/: rplidar_a2m8_launch.py  view_rplidar_a2m8_launch.py
rplidar_ros-dashing/rviz/: rplidar_ros.rviz
첨부.+2024년+ICT멘토링+공모전+제출서류+양식 (1)/: [서식1] 2024년 한이음 ICT멘토링 개발보고서_공모전 배포용.hwp
